[package]
name = "noita-saves"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
console = "0.16.2"
regex = "1.12.2"
bytesize = "2.3.1"
chrono = "0.4.42"
open = "5.3.3"
lnks = "0.2.0"
trim-margin = "0.1.0"

[build-dependencies]
winres = "0.1.12"
